# machines

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in
app/: Makefile.am  Makefile.in  audio_oss.c  audio_oss.h  delay.c  delay.h  disk.c  disk.h  flanger.c  flanger.h  lipaconf.c  lipaconf.h  machines.c  machines.h  main.c  midi.h  midievents.c  midievents.h  mixer.c  mixer.h  speaker.c  speaker.h  util.c  util.h  wavegen.c  wavegen.h  wavegennote.c  wavegennote.h  wavetable.c  wavetable.h  wavetablenote.c  wavetablenote.h
doc/: benchmach.txt  flanger.txt  flow.txt  maths.sml  maths.txt  res.c  resample.txt  thoughts.txt
examples/: 1.mach  2.mach  3.mach  4.mach
