## Process this file with automake to produce Makefile.in

SUBDIRS = app

EXTRA_DIST = acconfig.h \
	doc/maths.txt doc/maths.sml doc/resample.txt doc/res.c \
	doc/thoughts.txt doc/flanger.txt doc/flow.txt \
	doc/benchmach.txt \
	bs.wav strings.wav \
	examples/1.mach examples/2.mach examples/3.mach examples/4.mach



