dnl Process this file with autoconf to produce a configure script.
AC_INIT(app/machines.c)
AM_INIT_AUTOMAKE(machines, 0.0.7)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

AM_PATH_GLIB(1.2.0,,
   AC_MSG_ERROR(Cannot find correct version of GLib - is glib-config in path?))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_OUTPUT(Makefile app/Makefile)
